[project]
name = "own-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.22.1",
    "chainlit>=2.9.6",
    "langchain>=1.1.3",
    "langchain-anthropic>=1.2.0",
    "langchain-google-genai>=4.0.0",
    "langchain-openai>=1.1.1",
    "langgraph>=1.0.4",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "notebook>=7.5.0",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.46",
]
